--- a/php-fpm/Dockerfile
+++ b/php-fpm/Dockerfile
@@ -27,12 +27,17 @@ RUN apk add --update \
     php7-session \
     php7-simplexml \
     php7-xdebug \
+    php7-fileinfo \
+    php7-exif \
     make \
-    curl
+    curl \
+    vim
 
 RUN rm -rf /var/cache/apk/* && rm -rf /tmp/* && \
     curl --insecure https://getcomposer.org/composer.phar -o /usr/bin/composer && chmod +x /usr/bin/composer
 
+ADD symfony.ini /etc/php7/php-fpm.d/
+ADD symfony.ini /etc/php7/cli/conf.d/
 ADD xdebug.ini  /etc/php7/conf.d/
 
 ADD symfony.pool.conf /etc/php7/php-fpm.d/
