--- a/php-fpm/php.ini
+++ b/php-fpm/php.ini
@@ -1,5 +1,5 @@
 apc.enable_cli = 1
-date.timezone = ${PHP_DATE_TIMEZONE}
+date.timezone = UTC
 opcache.enable_cli = 1
 session.auto_start = Off
 short_open_tag = Off
@@ -11,3 +11,4 @@ realpath_cache_size = 4096K
 realpath_cache_ttl = 600
 
 memory_limit = 2G
+max_execution_time = 0
