--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,6 +1,7 @@
 server {
     server_name localhost;
     root /var/www;
+    sendfile off; # force refresh css
 
     location / {
         try_files $uri /index.php$is_args$args;
@@ -13,6 +14,14 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param HTTPS off;
+    }
+
+    location ~* ^.+\.(jpg|jpeg|gif|png|ico|css|zip|tgz|gz|rar|bz2|pdf|txt|tar|wav|bmp|rtf|js|flv|swf|xml|html|htm)$ {
+        # clear all access_log directives for the current level
+        access_log off;
+        add_header Cache-Control no-cache;
+        # set the Expires header to 31 December 2037 23:59:59 GMT, and the Cache-Control max-age to 10 years
+        expires -1s;
     }
 
     error_log /var/log/nginx/nucms_error.log;
