--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,9 @@
 PROJECT_NAME=nugato
 ROOT_PATH=./../applications
 
+APP_USER_ID=$(id -u)
+APP_GROUP_ID=$(id -g)
+
 MARIADB_DATABASE=nugato
 MARIADB_PASSWORD=root
 MARIADB_EXTERNAL_PORT=3306
